# ray-eater

./: .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon  out.txt
.github/workflows/: c-cpp.yml  ci.yaml
data/: data.txt
examples/api/: render_graph.zig
include/: defines.h  info.h  loader.h  ray_eater.h  types.h  versioning.h
samples/: basic_compute.zig  basic_planes.zig  test_sample.zig
samples/common/: helpers.zig  render_quad.zig
samples/compute_drawing/: main.zig
samples/compute_drawing/shaders/: compute_slime.glsl  frag.glsl
samples/raymarch_fractals/: main.zig
samples/raymarch_fractals/shaders/: hollow_boi.glsl  juliabulb.glsl  mandelbox.glsl  mandelbulb.glsl  manul.glsl  raymarch_template.glsl
samples/slime/: frag.glsl  main.zig
samples/slime/shaders/: compute_slime.glsl
shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: CMakeLists.txt  api.zig  context.zig  env.zig  factory.zig  glfw.zig  main.zig  math.zig  root.zig  test_all.zig  util.zig
src/api/: allocator.zig  api.zig  base.zig  buffer.zig  command_buffer.zig  common_types.zig  compute.zig  compute_pipeline.zig  depth.zig  descriptor.zig  descriptor_pool.zig  frame_buffer.zig  graphics_pipeline.zig  image.zig  index_buffer.zig  queue.zig  renderpass.zig  shader.zig  storage_buffer.zig  swapchain.zig  sync.zig  texture.zig  types.zig  uniform.zig  vertex_buffer.zig  vulkan.zig
src/api/memory/: DeviceMemoryLayout.zig  VulkanPool.zig  allocation.zig  allocator.zig  heap.zig
src/assets/: root.zig
src/common/: common.zig  config.zig  handle.zig  object_pool.zig  pool_allocator.zig  util.zig
src/graph/: render_graph.zig
src/lib/: d1.h  defines.h  lib.c  types.h
src/lib/core/: alloc_interface.h  mem.h
src/lib/platform/: info.h  info.h.in  utils.h  utils_Unix.c  utils_Win32.c
src/mem/: common.zig  handle.zig  pool_allocator.zig  registry.zig  resource_manager.zig
src/ray/: api.zig  context.zig  env.zig  math.zig  root.zig  util.zig
src/ray/api/: buffer.zig  depth.zig  descriptor.zig  image.zig  texture.zig  uniform.zig  vertex_buffer.zig  vulkan.zig
src/ray/debug/: meta.zig
src/res/: common.zig  pool_allocator.zig  registry.zig  res.zig  resource_manager.zig
src/resource_management/: factory.zig  pool_allocator.zig  registry.zig  res.zig  resource_manager.zig  unused.zig
src/rsh/: includes.txt
src/test/: test_all.zig  test_math.zig
src/tests/: testing.zig
test/: CMakeLists.txt  test.txt  test_env.zig  test_math.zig
test/Deliverable_1/: CMakeLists.txt  main.c
test/ray_info/: CMakeLists.txt  test_info.c
test/shared/: CMakeLists.txt  platform_utils.h  platform_utils_Unix.c  platform_utils_Win32.c  platform_utils_w32.c  test_utils.h  tmain.c.inl
tools/: clangd-includes.py
